--- a/src/main/webapp/nav.html
+++ b/src/main/webapp/nav.html
@@ -37,6 +37,7 @@
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
         <ul class="nav navbar-nav navbar-right">
+            <li><a href="sign-in.jsp"><span class="glyphicon glyphicon-log-in"></span> Sign in</a></li>
             <li><a href="sign-up.jsp"><span class="glyphicon glyphicon-user"></span> Sign up</a></li>
         </ul>
     </div><!-- /.navbar-collapse -->
